--- a/Nucleus.Tests/Nucleus.Tests.csproj
+++ b/Nucleus.Tests/Nucleus.Tests.csproj
@@ -31,11 +31,12 @@
     <Reference Include="System" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Package>nunit</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\Ecs\EntityTest.cs" />
+    <Compile Include="Ecs\EntityTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -43,10 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Core\" />
-    <Folder Include="Core\Ecs\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\nucleus\Nucleus.csproj">
+    <ProjectReference Include="..\Nucleus.csproj">
       <Project>{2B93F0C2-03DE-4AAD-8A68-F5C0805AB79C}</Project>
       <Name>Nucleus</Name>
     </ProjectReference>
