--- a/Nucleus.csproj
+++ b/Nucleus.csproj
@@ -44,16 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\Ecs\Component.cs" />
-    <Compile Include="Core\Ecs\Entity.cs" />
     <Compile Include="Core\Screen.cs" />
-    <Compile Include="Core\Ecs\SpriteComponent.cs" />
     <Compile Include="Core\CommonGame.cs" />
+    <Compile Include="Ecs\Component.cs" />
+    <Compile Include="Ecs\Components\SpriteComponent.cs" />
+    <Compile Include="Ecs\Entity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Core\" />
-    <Folder Include="Core\Ecs\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
